--- a/project/www/index.html
+++ b/project/www/index.html
@@ -22,7 +22,7 @@
 	<body>
 		<div class="wrapper container move-in-center">
 			<p class="text-success lead">Click the button to change the page</p>
-			<a class="btn btn-block btn-success" href="/form" role="button">Button</a>
-			<a class="btn btn-block btn-success disabled" href="/form" role="button">Нажимай на кнопку выше, на меня не нажмешь!</a>
+			<a class="btn btn-block btn-success" href="form.html" role="button">Button</a>
+			<a class="btn btn-block btn-success disabled" href="form.html" role="button">Нажимай на кнопку выше, на меня не нажмешь!</a>
 		</div>
 </html>
