--- a/project/www/dyn_form_test.html
+++ b/project/www/dyn_form_test.html
@@ -16,9 +16,16 @@
 		<!-- For serialization -->
 		<script type="text/javascript" src="../resources/jquery.serializejson.js"></script>
 
+    <script type="text/javascript" src="../resources/reporterlibrary.js"></script>
+
 		<style>
 				html, body {
 					height: 100%;
+
+				}
+				.wrapper{
+					padding: 5%;
+					background-color: 66ccff;
 				}
 				.move-in-center {
 					display: flex;
@@ -28,8 +35,13 @@
 					height: 100%;
 				}
 		</style>
+    <script>
+      var submitButton = document.mainForm.submit;
+      submitButton.addEventListener("click", sendForm);
+    </script>
 	</head>
 	<body>
+	<div class="main">
 	<div class="wrapper container move-in-center">
 		<form class="form-horizontal" name="mainForm" id="mainForm" method="POST" action="http://localhost/">
 			<div class="form-group">
@@ -39,34 +51,26 @@
 				</div>
 			</div>
 			<div class="form-group">
-				
 				<label for="date" class="col-sm-2 control-label">Date</label>
 				<div class="col-sm-10">
 					<input type="text" class="datepicker-here form-control" id="date" name="date" placeholder="Required" />
 				</div>
 			</div>
-			<div class="form-group">
-				<div class="col-sm-offset-2 col-sm-10">
-					<button type="button" class="btn btn-success" name="submit">Submit</button>
-				</div>
+      <div id="somearea" class="form-group">
+          <input type="hidden" id="default-id" value="0">
+
+      </div>
+      <div class="col-sm-10 form-group">
+        <input type="text" class="form-control" id="name" name="name" onfocus="setTimeout(addInput, 1000);" placeholder="Click to add new field"/>
+      </div>
+      <div class="form-group ">
+        <button onclick="addField();" type="button" class="btn btn-success">Submit</button>
 			</div>
+
+      <input type="hidden" name="count" value="0">
 		</form>
 	</div>
 	<div id="printBlock"></div>
-	<script>
-		function sendForm(e){
-			var formData = JSON.stringify($('#mainForm').serializeJSON());
-			$.ajax({
-				url:'http://localhost/',
-				type:'POST',
-				data: formData,
-				success: function(res) {
-					alert(res);
-				}
-			});
-		}
-		var submitButton = document.mainForm.submit;
-		submitButton.addEventListener("click", sendForm);
-	</script>
+</div>
 	</body>
 </html>
