--- a/project/www/index.html
+++ b/project/www/index.html
@@ -1,28 +1,34 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>The main page</title>
+		<title>IU Eiffel Reporter</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" charset="UTF-8">
 		<link rel="stylesheet" type="text/css" href="../resources/bootstrap.css">
 		<link rel="stylesheet" type="text/css" href="../resources/bootstrap-theme.css" >
 		<script type="text/javascript" src="../resources/bootstrap.min.js"></script>
-		<style>
-				html, body {
-					height: 100%;
-				}
-				.move-in-center {
-					display: flex;
-					flex-direction: column;
-					align-items: center;
-					justify-content: center;
-					height: 100%;
-				}
-		</style>
-	</head>
-	<body>
-		<div class="wrapper container move-in-center">
-			<p class="text-success lead">Click the button to change the page</p>
-			<a class="btn btn-block btn-success" href="form.html" role="button">Button</a>
-			<a class="btn btn-block btn-success disabled" href="form.html" role="button">Нажимай на кнопку выше, на меня не нажмешь!</a>
+
+		<!-- For calendar -->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+		<link href="../resources/datepicker.min.css" rel="stylesheet" type="text/css">
+		<script src="../resources/datepicker.min.js"></script>
+		<script src="../resources/i18n/datepicker.en.js"></script>
+
+		<!-- For serialization -->
+		<script type="text/javascript" src="../resources/jquery.serializejson.js"></script>
+
+		<script type="text/javascript" src="../resources/reporterlibrary.js"></script>
+		<link href="../resources/reporterlibrary.css" rel="stylesheet" type="text/css">
+  </head>
+  <body>
+    <div class="wrapper container">
+		<div class="logo-text">
+			<label class="logo-text">IU Eiffel Reporter</label>
 		</div>
+		<a class="button-yellow btn" href="/form_skeleton.html" role="button" style="font-size: 30pt; display:block; margin:100px auto; width:320px; height:80px;">Create Report</a>
+		<center><label style="font-size: 24pt; font-weight: normal;">This tool will help you to create and submit a report</label></center>
+    </div>
+  <div class="footer">
+    Developed by <label class="team-logo">DANDy</label> team
+  </div>
+  </body>
 </html>
